[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2024"
name = "napi-escape"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", default-features = false, features = ["napi3"] }
napi-derive = { version = "3.0.0", default-features = false, features = [
  "type-def",
] }
v_htmlescape = "0.15"

[target.'cfg(all(not(target_os = "linux"), not(target_family = "wasm")))'.dependencies]
mimalloc-safe = { version = "0.1", features = ["skip_collect_on_exit"] }

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc-safe = { version = "0.1", features = ["local_dynamic_tls", "skip_collect_on_exit"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
